--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
     /* margin: 5;  */
   }
 body {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  
   background-color: rgba(167, 163, 151, 0.691)
 }
 .board {
@@ -27,14 +29,23 @@ h1 {
   text-align: center;
 }
 
-.buttons {
+.newGame {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   display: flex;
   background-color: bisque;
   width: 20vw;
   height: 10vh;
-  color: rgb(38, 144, 38);
-  
+  color: black;
 }
+.quitGame {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  display: flex;
+  background-color: bisque;
+  width: 20vw;
+  height: 10vh;
+  color: black;
+}
+
 
 h3 {
   text-align: center;
