--- a/style.css
+++ b/style.css
@@ -1,6 +1,31 @@
+body {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: rgba(235, 217, 147, 0.691);
+  justify-content: flex-end;
+  
+}
+
+.board-container {
+  justify-content: center;
+  display: flex;
+  height: 50vh;
+}
+
+.board {
+  background-color: blanchedalmond;
+  display: flex;
+  flex-wrap: wrap;
+  width: 40%;
+  height: 100%;
+  justify-content: center; 
+  /* border: 2px solid #333; */
+  margin: 0 auto;
+  /* padding: 10px; */
+}
+
 .square {
-    width: 15vw;
-    height: 14vh;
+    width: 10vw;
+    height: 12vh;
     border: 2px solid #333;
     display: flex; 
     flex-wrap: space-between;
@@ -9,21 +34,6 @@
     /* justify-content: center;   */
     /* margin: 5;  */
   }
-body {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  
-  background-color: rgba(167, 163, 151, 0.691)
-}
-.board {
-  background-color: blanchedalmond;
-  display: flex;
-  flex-wrap: wrap;
-  width: 45%;
-  height: 45%;
-  /* justify-content: center;  */
-  /* border: 2px solid #333; */
-  margin: 0 auto;
-}
 
 h1 {
   text-align: center;
