--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 .board-container {
   justify-content: center;
   display: flex;
-  height: 50vh;
+  height: 55vh;
 }
 
 .board {
@@ -16,23 +16,20 @@ body {
   display: flex;
   flex-wrap: wrap;
   width: 40%;
-  height: 100%;
+  height: 98%;
   justify-content: center; 
-  /* border: 2px solid #333; */
   margin: 0 auto;
-  /* padding: 10px; */
 }
 
 .square {
     width: 10vw;
     height: 12vh;
     border: 2px solid #333;
-    display: flex; 
-    flex-wrap: space-between;
+    display: flex;
+    text-align: center;
+    justify-content: center;
     align-items: center; 
-    justify-content: space-between;
-    /* justify-content: center;   */
-    /* margin: 5;  */
+    margin: 3px;
   }
 
 h1 {
